--- a/sass/breakpoints/_medium.scss
+++ b/sass/breakpoints/_medium.scss
@@ -22,17 +22,20 @@
         gap: 2rem;
       }
       .section3 {
-.divisor1 {
-  p {
-    width: 75%;
-    margin: auto;
-  }
-}
-
+        .divisor1 {
+          p {
+            width: 75%;
+            margin: auto;
+          }
+        }
 
         .divisor2 .card {
           a.active {
             width: 40%;
+          }
+          .col-lg-12.col-sm-6 {
+            max-width: 60%;
+            margin: auto;
           }
         }
       }
