--- a/sass/breakpoints/_xx-small.scss
+++ b/sass/breakpoints/_xx-small.scss
@@ -47,6 +47,22 @@
           }
         }
       }
+
+      .section3 {
+        .divisor2 {
+          .row {
+            .card.col-lg-4.col-sm-12 {
+              .card {
+                .row {
+                  .col-lg-12.col-sm-6 {
+                    max-width: 100%;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 
