--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -20,6 +20,7 @@ main .back-to-top,
 .main .section3 .divisor2 h3,
 .main .section3 .divisor3 h3,
 .main .section3 .divisor2 img,
+.main .section3 .divisor2 .name,
 .main .section3 .divisor3 .mapa,
 main#musica div section div img,
 main#musica .divisor-2 .section4 a {
