--- a/sass/global/_colores.scss
+++ b/sass/global/_colores.scss
@@ -39,6 +39,10 @@ main {
   }
 }
 
+main#index .main .divisor2 .card .overlay .name {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 main.contacto .contenedor .section3 form ::placeholder {
   color: $color-fondo-oscuro;
 }
@@ -47,6 +51,7 @@ main.contacto .contenedor .section3 form ::placeholder {
 .navbar-toggler,
 main#index .main .divisor2 .card span.background,
 main#index .main .divisor2 .card a.active:hover,
+main#index .main .divisor2 .card .overlay p.name,
 main#musica .divisor-2 .section4 a:hover,
 main.contacto .contenedor .section3 form button:hover,
 main.contacto .contenedor .section3 form input:hover,
