--- a/sass/breakpoints/_xx-small.scss
+++ b/sass/breakpoints/_xx-small.scss
@@ -83,12 +83,10 @@
       margin-bottom: 3rem;
     }
 
-    .divisor-2 .section4 a {
-      padding: 0.5rem;
-    }
-
-    .divisor-2 .section4 img {
-      width: 90%;
+    .divisor-2 .section4 {
+      a {
+        padding: 0.5rem;
+      }
     }
   }
 
