--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -23,7 +23,8 @@ main .back-to-top,
 .main .section3 .divisor2 .name,
 .main .section3 .divisor3 .mapa,
 main#musica div section div img,
-main#musica .divisor-2 .section4 a {
+main#musica .divisor-2 .section4 a,
+main#musica .divisor-2 .section4 .overlay .name {
   border-radius: 20px;
 }
 
